コミットする

--- a/index.html
+++ b/index.html
@@ -7,15 +7,48 @@
     <title>GitとGithub説明</title>
 </head>
 <body>
-    <div id="git">
+    <center>
     <h1>Gitの説明</h1>
     <p>Gitとは、それぞれの作ったプログラムソースなどの変更履歴を管理することができるシステムです！</p>
-    <p>特徴としては、ローカル環境(自分のPC内)にもコードの変更履歴を保存することができ、個々のローカル環境がリポジトリのサーバーになることが可能になります！それにより、ネットワークに接続していなくても作業をすることができます！</p>
-    </div>
-    <div id="github">
+    <p>特徴としては、ローカル環境(自分のPC内)にもコードの変更履歴を保存することができ、個々のローカル環境がリポジトリのサーバーになることが可能になります！<br>それにより、ネットワークに接続していなくても作業をすることができます！</p>
     <h1>Githubの説明</h1>
     <p>Gitの仕組みを活用して、世界中の利用者に自分の作ったプログラムを共有できるようにしたウェブサービスのことです！</p>
-    <p>特徴としては、個人・企業問わずに無料で利用することができます！また、有料サービスを利用するとプライベートなリポジトリを作成することが可能になります！</p>
-
+    <p>特徴としては、個人・企業問わずに無料で利用することができます！<br>また、有料サービスを利用するとプライベートなリポジトリを作成することが可能になります！</p>
+    
+    <table border="1">
+        <tr>
+            <th>コンテンツ</th>
+            <th>説明</th>
+        </tr>
+        <tr>
+            <td>ssh -T git@github.com</td>
+            <td>Githubと連結ができているかの確認コード</td>
+        </tr>
+        <tr>
+            <td>git init</td>
+            <td>リポジトリを作成する。</td>
+        </tr>
+        <tr>
+            <td>git status</td>
+            <td>Gitの状態を表示させる。</td>
+        </tr>
+        <tr>
+            <td>git add .</td>
+            <td>ファイルをステージングする</td>
+        </tr>
+        <tr>
+            <td>git commit -m ~</td>
+            <td>ファイルをコミットする</td>
+        </tr>
+        <tr>
+            <td>git remote add origin ~</td>
+            <td>Githubと同期させる</td>
+        </tr>
+        <tr>
+            <td>git push -u origin master</td>
+            <td>ファイルをGithubにアップロードさせる</td>
+        </tr>
+    </table>
+    </center>
 </body>
 </html>
