--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GitとGithub説明</title>
+    <style>
+        @import url(index.css);
+    </style>
 </head>
 <body>
     <center>
-    <h1>Gitの説明</h1>
+    <div id="tt">
+    <h1>💻Gitの説明</h1>
     <p>Gitとは、それぞれの作ったプログラムソースなどの変更履歴を管理することができるシステムです！</p>
-    <p>特徴としては、ローカル環境(自分のPC内)にもコードの変更履歴を保存することができ、個々のローカル環境がリポジトリのサーバーになることが可能になります！<br>それにより、ネットワークに接続していなくても作業をすることができます！</p>
-    <h1>Githubの説明</h1>
+    <p>特徴としては、ローカル環境(自分のPC内)にもコードの変更履歴を保存することができ、<br>個々のローカル環境がリポジトリのサーバーになることが可能になります！<br>それにより、ネットワークに接続していなくても作業をすることができます！</p>
+    <h1>💻Githubの説明</h1>
     <p>Gitの仕組みを活用して、世界中の利用者に自分の作ったプログラムを共有できるようにしたウェブサービスのことです！</p>
     <p>特徴としては、個人・企業問わずに無料で利用することができます！<br>また、有料サービスを利用するとプライベートなリポジトリを作成することが可能になります！</p>
-    
+    <h1>💻コマンド一覧表</h1>
     <table border="1">
         <tr>
             <th>コンテンツ</th>
@@ -49,6 +53,7 @@
             <td>ファイルをGithubにアップロードさせる</td>
         </tr>
     </table>
+    </div>
     </center>
 </body>
 </html>
