--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <frameset cols="100,*">
     <frame name="menu" src="./menu.html"></frame>
     <frame name="contents" src="./contents.html"></frame>
-  </frameset>>
+  </frameset>
 </body>
 </html>
