--- a/sarmon.html
+++ b/sarmon.html
@@ -18,7 +18,7 @@
         <label for="isbn">好きな寿司ネタを選択！：
         </label>
         <select name="isbn" id="isbn">
-            <option value="sarmon">サーモン</option>
+            <option value="">サーモン</option>
             <option value="egg">たまご</option>
             <option value="maguro">まぐろ</option>
         </select>
