--- a/egg.html
+++ b/egg.html
@@ -18,7 +18,7 @@
         <label for="isbn">好きな寿司ネタを選択！：
         </label>
         <select name="isbn" id="isbn">
-            <option value="egg">たまご</option>
+            <option value="">たまご</option>
             <option value="samon">サーモン</option>
             <option value="maguro">まぐろ</option>
         </select>
