--- a/maguro.html
+++ b/maguro.html
@@ -17,9 +17,9 @@
     <form>
         <label for="isbn">好きな寿司ネタを選択！：</label>
         <select name="isbn" id="isbn">
-            <option value="">まぐろ</option>
-            <option value="egg">たまご</option>
-            <option value="sarmon">サーモン</option>
+            <option value="maguro.html">まぐろ</option>
+            <option value="egg.html">たまご</option>
+            <option value="sarmon.html">サーモン</option>
         </select>
     </form>
     <h2>新鮮なまぐろ！</h2>
