--- a/sarmon.html
+++ b/sarmon.html
@@ -18,13 +18,20 @@
         <label for="isbn">好きな寿司ネタを選択！：
         </label>
         <select name="isbn" id="isbn">
-            <option value="">サーモン</option>
-            <option value="egg">たまご</option>
-            <option value="maguro">まぐろ</option>
+            <option value="sarmon.html">サーモン</option>
+            <option value="egg.html">たまご</option>
+            <option value="maguro.html">まぐろ</option>
         </select>
     </form>
     <h2>新鮮なサーモン！</h2>
     <img src="sake.png" width="300px" height="250px"><img src="5754fe58a074d_40783013.jpg" width="300px" height="250px">
     </center>
-        </body>
+        <script>
+            document.addEventListener('DOMContentLoaded',function() {
+                document.getElementById('isbn').addEventListener('change',function() {
+                    location.href = this.value; 
+                },false);
+            },false);
+        </script>
+    </body>
 </html>
