--- a/egg.html
+++ b/egg.html
@@ -19,7 +19,7 @@
         </label>
         <select name="isbn" id="isbn">
             <option value="egg.html">たまご</option>
-            <option value="samon.html">サーモン</option>
+            <option value="sarmon.html">サーモン</option>
             <option value="maguro.html">まぐろ</option>
         </select>
     </form>
