--- a/sarmon.html
+++ b/sarmon.html
@@ -15,12 +15,13 @@
     <center>
         <h1>🍣寿司ネタ🍣</h1>
     <form>
-        <label for="isbn">好きな寿司ネタを選択！：
+        <label for="isbn">項目を選択！：
         </label>
         <select name="isbn" id="isbn">
             <option value="sarmon.html">サーモン</option>
             <option value="egg.html">たまご</option>
             <option value="maguro.html">まぐろ</option>
+            <option value="Git.html">gitの使い方とgithub-pagesの作り方！</option>
         </select>
     </form>
     <h2>新鮮なサーモン！</h2>
