--- a/maguro.html
+++ b/maguro.html
@@ -21,6 +21,7 @@
             <option value="egg.html">たまご</option>
             <option value="sarmon.html">サーモン</option>
             <option value="Git.html">gitの使い方とgithub-pagesの作り方！</option>
+            <option value="images.html">可愛いネコたち</option>
         </select>
     </form>
     <h2>新鮮なまぐろ！</h2>
