--- a/Git.html
+++ b/Git.html
@@ -27,6 +27,7 @@
             <option value="maguro.html">まぐろ</option>
             <option value="egg.html">たまご</option>
             <option value="sarmon.html">サーモン</option>
+            <option value="images.html">可愛いネコたち</option>
         </select>
     </form>
     <br>
