--- a/images.html
+++ b/images.html
@@ -61,7 +61,7 @@ window.addEventListener("load", function(){
             </form>
             <br>
             <h3>癒しの時間をお届けします(*´ω｀*)</h3>
-            <p><img id ="image" src="./img/flower.jpg" alt="ネコ" width="350px" height="300px"/></p>
+            <p><img id ="image" src="./img/images (1).jpg" alt="ネコ" width="350px" height="300px"/></p>
             <button>ここを猫パンチ！🐾</button>
         </center>
     </body>
