--- a/images.html
+++ b/images.html
@@ -58,5 +58,12 @@ window.addEventListener("load", function(){
             <p><img id ="image" src="./img/IMG_4189.JPG" alt="ネコ" width="450px" height="500px"/></p>
             <button>ここを猫パンチ！🐾</button>
         </center>
+        <script>
+                document.addEventListener('DOMContentLoaded',function() {
+                    document.getElementById('isbn').addEventListener('change',function() {
+                        location.href = this.value; 
+                        },false);
+                    },false);
+            </script>
     </body>
 </html>
