--- a/Git.html
+++ b/Git.html
@@ -43,7 +43,7 @@
                 <p>アカウントに登録後、"New Repository"を選択します。
                     <br>Repository name"の部分に好きな名前でリポジトリを作成します。
                     <br>"Description"の部分にコメントを残します。</p>
-                    <img src="キャ.PNG"　width="500px" height="350px">
+                    <img src="./img/キャ.PNG"　width="500px" height="350px">
                 <p>リポジトリの中にあらかじめREADMEファイルを作成しておく場合は、
                     <br>「Initialize this repository with a README」にチェックします！
                     <br>リモートリポジトリのアドレスはアップロード時に使うので、控えておいてください！</p>
