--- a/maguro.html
+++ b/maguro.html
@@ -25,7 +25,7 @@
         </select>
     </form>
     <h2>新鮮なまぐろ！</h2>
-    <img src="img_0.png" width="300px" height="250px"><img src="images.jpg" width="300px" height="250px">
+    <img src="./img/img_0.png" width="300px" height="250px"><img src="./img/images.jpg" width="300px" height="250px">
     </center>
     <script>
         document.addEventListener('DOMContentLoaded',function() {
