--- a/egg.html
+++ b/egg.html
@@ -26,7 +26,7 @@
         </select>
     </form>
     <h2>新鮮なたまご！</h2>
-    <img src="c88930ab6505336e54f57ec7f7571e62.png" width="300px" height="250px"><img src="5e8b1_1405_8bc7a9dae3d834d447fd48779ec9795f.jpg" width="300px" height="250px">
+    <img src="./img/c88930ab6505336e54f57ec7f7571e62.png" width="300px" height="250px"><img src="./img/5e8b1_1405_8bc7a9dae3d834d447fd48779ec9795f.jpg" width="300px" height="250px">
     </center>
     <script>
             document.addEventListener('DOMContentLoaded',function() {
