--- a/sarmon.html
+++ b/sarmon.html
@@ -25,7 +25,7 @@
         </select>
     </form>
     <h2>新鮮なサーモン！</h2>
-    <img src="sake.png" width="300px" height="250px"><img src="5754fe58a074d_40783013.jpg" width="300px" height="250px">
+    <img src="./img/sake.png" width="300px" height="250px"><img src="./img/5754fe58a074d_40783013.jpg" width="300px" height="250px">
     </center>
         <script>
             document.addEventListener('DOMContentLoaded',function() {
