--- a/sarmon.html
+++ b/sarmon.html
@@ -22,6 +22,7 @@
             <option value="maguro.html">まぐろ</option>
             <option value="egg.html">たまご</option>
             <option value="Git.html">gitの使い方とgithub-pagesの作り方！</option>
+            <option value="images.html">可愛いネコたち</option>
         </select>
     </form>
     <h2>新鮮なサーモン！</h2>
