--- a/maguro.html
+++ b/maguro.html
@@ -17,7 +17,7 @@
     <form>
         <label for="isbn">項目を選択！：</label>
         <select name="isbn" id="isbn">
-            <option value="maguro.html">まぐろ</option>
+            <option value="">--選択して下さい--</option>
             <option value="egg.html">たまご</option>
             <option value="sarmon.html">サーモン</option>
             <option value="Git.html">gitの使い方とgithub-pagesの作り方！</option>
