--- a/Git.html
+++ b/Git.html
@@ -21,14 +21,18 @@
     <center>
         <h1>gitの使い方とgithub-pagesの作り方！</h1>
     <form>
-        <label for="isbn">項目一覧：</label>
-        <select name="isbn" id="isbn">
-            <option value="Git.html">gitの使い方とgithub-pagesの作り方！</option>
-            <option value="maguro.html">まぐろ</option>
-            <option value="egg.html">たまご</option>
-            <option value="sarmon.html">サーモン</option>
-            <option value="images.html">可愛いネコたち</option>
-        </select>
+            <label for="isbn">項目を選択！：</label>
+            <select name="isbn" id="isbn">
+                <option value="">--選択して下さい--</option>
+                <option value="maguro.html">まぐろ</option>
+                <option value="sarmon.html">サーモン</option>
+                <option value="egg.html">たまご</option>
+                <option value="Git.html">gitの使い方とgithub-pagesの作り方！</option>
+                <option value="images.html">可愛いネコたち</option>
+                <option value="method.html">Windowsメソッドの使い方</option>
+                <option value="console.html">コンソール紹介</option>
+                <option value="tokei.html">タイマー</option>
+            </select>
     </form>
     <br>
     <br>
