--- a/egg.html
+++ b/egg.html
@@ -15,15 +15,18 @@
     <center>
         <h1>🍣寿司ネタ🍣</h1>
     <form>
-        <label for="isbn">項目を選択！：
-        </label>
-        <select name="isbn" id="isbn">
-            <option value="egg.html">たまご</option>
-            <option value="maguro.html">まぐろ</option>
-            <option value="sarmon.html">サーモン</option>
-            <option value="Git.html">gitの使い方とgithub-pagesの作り方！</option>
-            <option value="images.html">可愛いネコたち</option>
-        </select>
+            <label for="isbn">項目を選択！：</label>
+            <select name="isbn" id="isbn">
+                <option value="">--選択して下さい--</option>
+                <option value="maguro.html">まぐろ</option>
+                <option value="sarmon.html">サーモン</option>
+                <option value="egg.html">たまご</option>
+                <option value="Git.html">gitの使い方とgithub-pagesの作り方！</option>
+                <option value="images.html">可愛いネコたち</option>
+                <option value="method.html">Windowsメソッドの使い方</option>
+                <option value="console.html">コンソール紹介</option>
+                <option value="tokei.html">タイマー</option>
+            </select>
     </form>
     <h2>新鮮なたまご！</h2>
     <img src="./img/c88930ab6505336e54f57ec7f7571e62.png" width="300px" height="250px"><img src="./img/5e8b1_1405_8bc7a9dae3d834d447fd48779ec9795f.jpg" width="300px" height="250px">
