--- a/maguro.html
+++ b/maguro.html
@@ -15,14 +15,18 @@
     <center>
         <h1>🍣寿司ネタ🍣</h1>
     <form>
-        <label for="isbn">項目を選択！：</label>
-        <select name="isbn" id="isbn">
-            <option value="">--選択して下さい--</option>
-            <option value="egg.html">たまご</option>
-            <option value="sarmon.html">サーモン</option>
-            <option value="Git.html">gitの使い方とgithub-pagesの作り方！</option>
-            <option value="images.html">可愛いネコたち</option>
-        </select>
+            <label for="isbn">項目を選択！：</label>
+            <select name="isbn" id="isbn">
+                <option value="">--選択して下さい--</option>
+                <option value="maguro.html">まぐろ</option>
+                <option value="sarmon.html">サーモン</option>
+                <option value="egg.html">たまご</option>
+                <option value="Git.html">gitの使い方とgithub-pagesの作り方！</option>
+                <option value="images.html">可愛いネコたち</option>
+                <option value="method.html">Windowsメソッドの使い方</option>
+                <option value="console.html">コンソール紹介</option>
+                <option value="tokei.html">タイマー</option>
+            </select>
     </form>
     <h2>新鮮なまぐろ！</h2>
     <img src="./img/img_0.png" width="300px" height="250px"><img src="./img/images.jpg" width="300px" height="250px">
