--- a/images.html
+++ b/images.html
@@ -52,8 +52,8 @@ window.addEventListener("load", function(){
                         <option value="Git.html">gitの使い方とgithub-pagesの作り方！</option>
                         <option value="images.html">可愛いネコたち</option>
                         <option value="method.html">Windowsメソッドの使い方</option>
-                        <option value="console.html">コンソール紹介</option>
-                        <option value="tokei.html">タイマー</option>
+                        <option value="console.html">Consoleオブジェクト</option>
+                        <option value="time.html">タイマー</option>
                     </select>
             </form>
             <br>
