--- a/maguro.html
+++ b/maguro.html
@@ -24,8 +24,8 @@
                 <option value="Git.html">gitの使い方とgithub-pagesの作り方！</option>
                 <option value="images.html">可愛いネコたち</option>
                 <option value="method.html">Windowsメソッドの使い方</option>
-                <option value="console.html">コンソール紹介</option>
-                <option value="tokei.html">タイマー</option>
+                <option value="console.html">Consoleオブジェクト</option>
+                <option value="time.html">タイマー</option>
             </select>
     </form>
     <h2>新鮮なまぐろ！</h2>
