--- a/method.html
+++ b/method.html
@@ -66,8 +66,8 @@
                 <option value="Git.html">gitの使い方とgithub-pagesの作り方！</option>
                 <option value="images.html">可愛いネコたち</option>
                 <option value="method.html">Windowsメソッドの使い方</option>
-                <option value="console.html">コンソール紹介</option>
-                <option value="tokei.html">タイマー</option>
+                <option value="console.html">Consoleオブジェクト</option>
+                <option value="time.html">タイマー</option>
             </select>
     </form>
     </center>
@@ -117,7 +117,7 @@
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       document.getElementById('isbn').addEventListener('change', function () {
-        location.href = "https://nakamurayuchesnaughtsceptile.github.io/" + this.value;
+        location.href = "https://murasakiimo.github.io/" + this.value;
       }, false);
     }, false);
   </script>
