--- a/browser.html
+++ b/browser.html
@@ -32,7 +32,7 @@
   <script>
     document.addEventListener('DOMContentLoaded', function () {
             document.getElementById('isbn').addEventListener('change', function () {
-                location.href = "https://murasakiimo.github.io/" + this.value;
+              location.href = this.value;
             }, false);
         }, false);
   </script>
