--- a/maguro.html
+++ b/maguro.html
@@ -26,6 +26,7 @@
                 <option value="method.html">Windowsメソッドの使い方</option>
                 <option value="console.html">Consoleオブジェクト</option>
                 <option value="time.html">タイマー</option>
+                <option value="pulldown.html">巻末問題</option>
             </select>
     </form>
     <h2>新鮮なまぐろ！</h2>
