--- a/method.html
+++ b/method.html
@@ -68,6 +68,7 @@
                 <option value="browser.html">ブラウザの判定</option>
                 <option value="console.html">Consoleオブジェクト</option>
                 <option value="time.html">タイマー</option>
+                <option value="pulldown.html">巻末問題</option>
             </select>
     </form>
     </center>
