--- a/sarmon.html
+++ b/sarmon.html
@@ -26,6 +26,7 @@
                 <option value="method.html">Windowsメソッドの使い方</option>
                 <option value="console.html">コンソール紹介</option>
                 <option value="tokei.html">タイマー</option>
+                <option value="pulldown.html">巻末問題</option>
             </select>
     </form>
     <h2>新鮮なサーモン！</h2>
