--- a/Git.html
+++ b/Git.html
@@ -32,6 +32,7 @@
                 <option value="method.html">Windowsメソッドの使い方</option>
                 <option value="console.html">Consoleオブジェクト</option>
                 <option value="time.html">タイマー</option>
+                <option value="pulldown.html">巻末問題</option>
             </select>
     </form>
     <br>
