--- a/images.html
+++ b/images.html
@@ -54,6 +54,7 @@ window.addEventListener("load", function(){
                         <option value="method.html">Windowsメソッドの使い方</option>
                         <option value="console.html">Consoleオブジェクト</option>
                         <option value="time.html">タイマー</option>
+                        <option value="pulldown.html">巻末問題</option>
                     </select>
             </form>
             <br>
