--- a/time.html
+++ b/time.html
@@ -27,6 +27,7 @@
                             <option value="browser.html">ブラウザの判定</option>
                             <option value="method.html">Windowsメソッドの使い方</option>
                             <option value="console.html">Consoleオブジェクト</option>
+                            <option value="pulldown.html">巻末問題</option>
                         </select>
                 </form>
     <script>
