--- a/Git.html
+++ b/Git.html
@@ -37,7 +37,7 @@
     </form>
     <br>
     <br>
-    <img src="parallax_octocat.png" width="200px">
+    <img src="img/parallax_octocat.png" width="200px">
     <h3>オクトキャット<br>-フォースの覚醒-</h3>
     <div id="tt">
             
