--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -164,7 +164,7 @@
         </section>
     </main>
     <!-- フッター -->
-    <p class="pagetop"><a href="#container"><img src="img/pagetop.png" alt="PAGE TOP" /></a></p>
+    <p class="pagetop"><a href="#icon"><img src="img/pagetop.png" alt="PAGE TOP" /></a></p>
     <footer>
         <h2 id=apple><img src="img/icon.png" alt="リンゴアイコン"></h2>
         <ul>
