--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -181,7 +181,7 @@
         </section>
     </main>
     <!-- フッター -->
-    <p id="pagetop"><a href="#icon"><img id="topwarp" src="img/pagetop.png" alt="PAGE TOP" /></a></p>
+    <p id="pagetop"><a href="#top"><img id="topwarp" src="img/pagetop.png" alt="PAGE TOP" /></a></p>
     <footer>
         <h2 id=apple><img src="img/icon.png" alt="リンゴアイコン"></h2>
         <ul>
