--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -69,12 +69,15 @@
                         </tr>
                     </table>
                 </center>
-                <p>
-                    Webクリエイターのプロフェッショナルを目指して日々勉強しています！学校では、<br>
-                    HTML,CSS,JavaScript,PHPの勉強をしています。授業外では、デザインカンプを考えたり<br>
-                    色々なサイトのデザインやソースを見たりして研究しています。<br>
-                    趣味は、韓国語の勉強・音楽を聞くことです。晴れた休みの日はよく散歩に行き、<br>
-                    おいしい飲食店や綺麗な風景写真を撮っています。
+                <p id="text">
+                    Webクリエイターのプロフェッショナルを目指して日々<br>
+                    勉強しています！学校では、HTML , CSS , JavaScript , PHP <br>
+                    の勉強をしています。授業外では、デザインカンプを<br>
+                    考えたり色々なサイトのデザインやソースを見たりし<br>
+                    て研究しています。<br>
+                    趣味は、韓国語の勉強・音楽を聞くことです。晴れた休<br>
+                    みの日はよく散歩に行き、おいしい飲食店や綺麗な風景<br>
+                    写真を撮っています。
                 </p>
             </div>
         </section>
@@ -135,7 +138,7 @@
                         <img src="img/mem4.PNG" width="150" height="220" alt="サイト">
                     </div>
                     <div id="contents3">
-                        <p>MEMBERS CUP</p>
+                        <p>M E M B E R S  C U P</p>
                     </div>
                     <div id="contents4">
                         <p>
@@ -152,15 +155,15 @@
             <h2>Contact</h2>
             <form>
                 <div id="Cname">
-                    <label for="name"> Name</label><br>
+                    <label> Name</label><br>
                     <input type="text" name="name"/>
                 <div>
                 <div id="Cmail">
-                    <label for="mail"> E-mail</label><br>
+                    <label> E-mail</label><br>
                     <input type="email" name="email" />
                 </div>
                 <div id="Ctext">
-                    <label for="text"> Comment</label><br>
+                    <label> Comment</label><br>
                     <textarea name="comment" cols="50" rows="14"></textarea><br>
                 </div>
                 <input type="submit" value="SEND">
