--- a/morijyobi/index.html
+++ b/morijyobi/index.html
@@ -192,11 +192,11 @@
                 </ul>
             </div>
 
+            <h2>
+                    <img src="img/tit_schedule.png" alt="モリジョビのオープンキャンパスはこんな流れで進みます オープンキャンパスの１日の流れ" width="699" height="86">
+                </h2>
             <div class="scheduleCont">
                 <div class="innerCont">
-                    <h2>
-                        <img src="img/tit_schedule.png" alt="モリジョビのオープンキャンパスはこんな流れで進みます オープンキャンパスの１日の流れ" width="699" height="86">
-                    </h2>
                     <ul class="sd">
                         <li class="step1">
                             <div class="clock">
@@ -256,11 +256,11 @@
             </div>
 
             <!-- /Q&A -->
+            <p id="QandAoc">
+                <img src="img/tit_qa.png" alt="オープンキャンパスに関する疑問質問にお答えします！ 参加する前のQ&amp;A" width="547" height="91">
+            </p>
             <div class="qaCont">
                 <div class="innerCont">
-                    <h2>
-                        <img src="img/tit_qa.png" alt="オープンキャンパスに関する疑問質問にお答えします！ 参加する前のQ&amp;A" width="565" height="91">
-                    </h2>
                     <dl>
                         <dt>オープンキャンパスに参加するときの持ち物はありますか？</dt>
                         <dd>
