--- a/morijyobi/index.html
+++ b/morijyobi/index.html
@@ -44,11 +44,11 @@
 
     <div id="player"></div>
     <div id="overlay"></div>
-    <div id="txt">
-        <img src="img/txt_opencampus.png" alt="OPENCAMPUS MCL盛岡情報ビジネス専門学校 IT、コンピュータ、ゲーム、ビジネス、デザイン、 アニメ、マンガを目指しているあなた、 モリジョビのオープンキャンパスにぜひ来てください！">
-        <h1>次回開催７月２８日</h1>
-        <a href="#">お申込みはこちらから！</a>
-    </div>
+    <h1 id="txtFV">
+        <img src="img/txt_opencampus.png" alt="OPENCAMPUS MCL盛岡情報ビジネス専門学校 IT、コンピュータ、ゲーム、ビジネス、デザイン、 アニメ、マンガを目指しているあなた、 モリジョビのオープンキャンパスにぜひ来てください！" width="390" height="200">
+        <p id="hiduke">次回開催７月２８日</p>
+        <p id="MB"><a href="#">お申込みはこちらから！</a></p>
+    </h1>
 
     <!-- ＊main ＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊ -->
 
