--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -45,7 +45,7 @@
     <!-- メインのコンテンツ -->
     <main>
         <div id="example">
-            <h1><img src="img/top.png" width="100%" height="550" alt="My PORTFOLIO"></h1>
+            <h1><img src="img/top.png" width="100%" alt="My PORTFOLIO"></h1>
             <p>My PORTFOLIO</p>
         </div>
             <!-- プロフィール -->
