--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -15,7 +15,7 @@
 <body>
     <!-- ヘッダー＆ナビゲーション -->
     <header>
-        <h2>Tanaka himeko</h2>
+        <h2>TANAKA HIMEKO</h2>
             <nav>
                 <ul>
                     <li id="navi1"><a href="about.html">About</a></li>
@@ -31,9 +31,9 @@
                    </div>
                 </div>
                 <div class="icons">
-                   <i class="fa fa-user" aria-hidden="true">about</i>
-                   <i class="fa fa-calendar-o" aria-hidden="true">work</i>
-                   <i class="fa fa-tachometer" aria-hidden="true">photo</i>
+                   <i class="fa fa-user" aria-hidden="true"></i>
+                   <i class="fa fa-calendar-o" aria-hidden="true"></i>
+                   <i class="fa fa-tachometer" aria-hidden="true"></i>
                 </div>
                 <div class="section">
                    <div class="cover1">
