--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -24,7 +24,7 @@
 			<h2>form</h2>
 			<nav>
 				<ul>
-					<li id="navi1"><a href="top.html">Top</a></li>
+					<li id="navi1"><a href="portfolio.html">Top</a></li>
 					<li id="navi2"><a href="about.html">About</a></li>
 					<li id="navi3"><a href="photo.html">photo</a></li>
 				</ul>
