--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -18,6 +18,8 @@
 	<link rel="stylesheet" href="css/astyle.css">
 
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="shortcut icon" href="img/icon.ico">
+
 
 
 	<!-- Modernizr JS -->
@@ -119,8 +121,8 @@
 			</div>
 		</div><!-- end fh5co-common-section -->
 		<footer>
-				<p>&copy;TanakaHimeko.</p>
-			</footer>
+			<p>&copy;TanakaHimeko.</p>
+		</footer>
 
 		<!-- jQuery -->
 		<script src="js/jquery.min.js"></script>
