--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link rel="stylesheet" type="text/css" href="css/mailform.css" />
 <link rel="stylesheet" type="text/css" href="addon/confirm/confirm.css" />
+<link rel="shortcut icon" href="img/icon.ico">
 
 </head>
 <body>
