--- a/portfolio/photo.html
+++ b/portfolio/photo.html
@@ -8,7 +8,9 @@
 	<link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Schoolbell" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Schoolbell" rel="stylesheet">
+	<link rel="shortcut icon" href="img/icon.ico">
+
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
     </script>
 	</head>
